# libintl-lite

./: .gitignore  CMakeLists.txt  LibIntlConfig.cmake.in  README.md  build-android-cmake.sh  build.sh  libintl.h
internal/: Util.hpp  libintl.cpp
